refactor(upload): 파일 업로드 관련 서비스 코드 개선